--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+<header class="navbar" style="margin: 1rem; border">
+  <section class="navbar-section">
+    <a href="..." class="navbar-brand mr-2">Trabajo Practico</a>
+    <a href="..." class="btn btn-link">Usuario</a>
+    <a href="..." class="btn btn-link">Avisos</a>
+  </section>
+  <section class="navbar-section">
+    <a href="..." class="btn btn-link">Alumno</a>
+  </section>
+</header>
     {% block content %}
     {% endblock content %}
 </body>
