Add images to home and intro

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,10 @@
     <div class="container">
     <div class="columns">
         <div class="column col-8">
+          <div class="text-left">
+            <h1 class="text-primary text-large">Sitio de avisos del teciario</h1>
+            <h1 class="text-gray text-large">En este lugar encontrara avisos sobre la institución.</h1>
+          </div>
         </div>
 
 
@@ -36,8 +40,15 @@
               </div>
             </div>
             <div class="card-footer">
-              <button class="btn btn-primary">Iniciar</button>
-              <button class="btn btn-secondary">Registrarse</button>
+              <div class="columns">
+                <div class="column col-3">
+                  <button class="btn btn-primary">Iniciar</button>
+                </div>
+                <div class="divider-vert"></div>
+                <div class="column col-3">
+                  <button class="btn btn-secondary">Registrarse</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
