--- a/templates/_base.html
+++ b/templates/_base.html
@@ -20,7 +20,7 @@
       <img src="{% static 'logo.png' %}" alt="Urquiza" style="height: 32px; width: 42">
     </section>
   <section class="navbar-section">
-    <a href="..." class="btn btn-link">Alumno</a>
+    <a href="..." class="btn btn-link">Sobre nosotros</a>
   </section>
 </header>
     {% block content %}
