Add some templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,9 @@
                 </div>
                 <div class="divider-vert"></div>
                 <div class="column col-3">
-                  <button class="btn btn-secondary">Registrarse</button>
+                  <a href="{% url 'register' %}">
+                    <button class="btn btn-secondary">Registrarse</button>
+                  </a>
                 </div>
               </div>
             </div>
