--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>{% block title %}TP{% endblock title %}</title>
     {% load static %}
+    <link rel="shortcut icon" type="image/ico" href="{% static 'favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'spectre.min.css' %}">
     <link rel="stylesheet" href="{% static 'spectre-exp.min.css' %}">
     <link rel="stylesheet" href="{% static 'spectre-icons.min.css' %}">
