--- a/templates/_base.html
+++ b/templates/_base.html
@@ -13,9 +13,9 @@
 <body>
 <header class="navbar" style="margin: 1rem; border">
   <section class="navbar-section">
-    <a href="{% url 'home' %}" class="navbar-brand mr-2">Trabajo Practico</a>
-    <a href="..." class="btn btn-link">Usuario</a>
-    <a href="..." class="btn btn-link">Avisos</a>
+    <a href="{% url 'home' %}" class="navbar-brand mr-2">Avisos terciario</a>
+    <a href="" class="btn btn-link">Usuario</a>
+    <a href="{% url 'avisos-list' %}" class="btn btn-link">Avisos</a>
   </section>
     <section class="navbar-center">
       <img src="{% static 'logo.png' %}" alt="Urquiza" style="height: 32px; width: 42">
