Remove list style in about us

--- a/templates/us.html
+++ b/templates/us.html
@@ -3,10 +3,10 @@
 {% block title %}Nosotros{% endblock %}
 
 {% block content %}
-<div class="hero ">
-  <div class="hero-body">
+<div class="hero hero-lg">
+  <div class="hero-body text-center">
     <h1>Sitio desarrollado por</h1>
-    <ul>
+    <ul style="list-style-type: none">
         <li>Fabrizio Helmbold</li>
         <li>Javier Tomas</li>
         <li>Sebastián Valdivia</li>
