--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,39 +1,38 @@
 {% extends "_base.html" %}
 
-{% block title%} Iniciar secion {% endblock %}
+{% block title%} Iniciar sesion {% endblock %}
 
 {% block content %}
-
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-  
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to see this page.</p>
+  <div class="hero-lg" style="margin-left:10%">
+    {% if form.errors %}
+      <p>Nombre de usuario o contraseña incorrectos</p>
     {% endif %}
-  {% endif %}
-  
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next }}" />
-  </form>
-  
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-  
+    
+    {% if next %}
+      {% if user.is_authenticated %}
+        <p class="text-error">Ya esta logeado</p>
+      {% else %}
+        <p>Solo para usuarios del sitio</p>
+      {% endif %}
+    {% endif %}
+    
+    <form method="post" action="{% url 'login' %}">
+      {% csrf_token %}
+      <table>
+        <tr>
+          <td>{{ form.username.label_tag }}</td>
+          <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.password.label_tag }}</td>
+          <td>{{ form.password }}</td>
+        </tr>
+      </table>
+      <input type="submit" value="Iniciar sesion" />
+      <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <p><a href="{% url 'password_reset' %}">Olvido contraseña?</a></p>
+  </div>
 {% endblock %}
