--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,6 +23,10 @@
       <img src="{% static 'logo.png' %}" alt="Urquiza" style="height: 32px; width: 42">
     </section>
     <section class="navbar-section">
+    {% if user.is_authenticated is False %}
+    <a href="{% url 'login' %}" class="btn btn-link">Usuario</a>
+    <a href="{% url 'us' %}" class="btn btn-link"></a>
+    {% endif %}
     <a href="{% url 'us' %}" class="btn btn-link">Sobre nosotros</a>
   </section>
 </header>
