--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,6 +27,9 @@
     <a href="{% url 'login' %}" class="btn btn-link">Usuario</a>
     <a href="{% url 'us' %}" class="btn btn-link"></a>
     {% endif %}
+    {% if user.is_authenticated %}
+    <a href="{% url 'logout' %}" class="btn btn-link">Cerrar Sesión</a>
+    {% endif %}
     <a href="{% url 'us' %}" class="btn btn-link">Sobre nosotros</a>
   </section>
 </header>
