--- a/templates/_base.html
+++ b/templates/_base.html
@@ -25,7 +25,7 @@
     <section class="navbar-section">
     {% if user.is_authenticated is False %}
     <a href="{% url 'login' %}" class="btn btn-link">Usuario</a>
-    <a href="{% url 'us' %}" class="btn btn-link"></a>
+    <a href="{% url 'signup' %}" class="btn btn-link">Registrar</a>
     {% endif %}
     {% if user.is_authenticated %}
     <a href="{% url 'logout' %}" class="btn btn-link">Cerrar Sesión</a>
