--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,13 @@
-{% extends "_base.html" %}
-
-{% block title %}Registrarse{% endblock %}
+{% extends '_base.html' %}
 
 {% block content %}
-    <form method="POST" class="form-group">
+    <br>
+    <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Register</button>
+        {{form}}
+        <button style="background-color:#F4EB16; color:blue" class="btn btn-outline-info" type="submit">Sign Up</button>
     </form>
+
+    If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead.
+
 {% endblock %}
