--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
     <form method="POST">
         {% csrf_token %}
         {{form}}
-        <button style="background-color:#F4EB16; color:blue" class="btn btn-outline-info" type="submit">Sign Up</button>
+        <button style=" color:blue" class="btn btn-outline-info" type="submit">Sign Up</button>
     </form>
 
     If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead.
