--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,7 +16,7 @@
     <a href="{% url 'home' %}" class="navbar-brand mr-2">Avisos terciario</a>
     <a href="{% url 'avisos-list' %}" class="btn btn-link">Avisos</a>
     {% if user.is_authenticated %}
-      <a href="" class="btn btn-link">Usuario</a>
+    <a href="{% url 'password_change' %}" class="btn btn-link">Usuario</a>
     {% endif %}
   </section>
     <section class="navbar-center">
@@ -24,7 +24,7 @@
     </section>
     <section class="navbar-section">
     {% if user.is_authenticated is False %}
-    <a href="{% url 'login' %}" class="btn btn-link">Usuario</a>
+    <a href="{% url 'login' %}" class="btn btn-link">Iniciar sesión</a>
     <a href="{% url 'us' %}" class="btn btn-link"></a>
     {% endif %}
     {% if user.is_authenticated %}
