--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,6 @@
         <button style=" color:blue" class="btn btn-outline-info" type="submit">Sign Up</button>
     </form>
 
-    If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead.
+    If you already have an account <a href="{% url 'login' %}"><strong>login</strong></a> instead.
 
 {% endblock %}
