Add style to logout

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,8 @@
 {% extends "_base.html" %}
 
 {% block content %}
-  <p class="text-success">Saliendo!</p>  
-  <a href="{% url 'login'%}">Volver a iniciar sesión.</a>
+  <div class="text-center">
+    <p class="text-success">Saliendo!</p>  
+    <a href="{% url 'login'%}">Volver a iniciar sesión.</a>
+  </div>
 {% endblock %}
