Color loing letters

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,13 +9,13 @@
       <table>
         <tr>
           <div class="form-group">
-            <label class="form-label" for="input-example-1">{{ form.username.label_tag }}</label>
+            <label class="form-label text-primary" for="input-example-1">{{ form.username.label_tag }}</label>
             {{ form.username }}
           </div>
         </tr>
         <tr>
           <div class="form-group">
-            <label class="form-label" for="input-example-1">{{ form.password.label_tag }}</label>
+            <label class="form-label text-primary" for="input-example-1">{{ form.password.label_tag }}</label>
             {{ form.password }}
           </div>
         </tr>
