Add style to password change template

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -3,9 +3,19 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Guardar</button>
-</form>
+<div class="container">
+  <form method="post">
+    {% csrf_token %}
+    <div class="columns">
+      <div class="column text-primary">
+        {{ form.as_p }}
+      </div>
+    </div>
+    <div class="columns">
+      <div class="column">
+        <button type="submit" class="btn">Guardar</button>
+      </div>
+    </div>
+  </form>
+</div>
 {% endblock content %}
